logs/dag_id=spotify_etl_pipeline/run_id=manual__2025-09-24T03:56:13.764170+00:00/task_id=gold_transform/attempt=1.log
[2025-09-24T03:56:46.158+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spotify_etl_pipeline.gold_transform manual__2025-09-24T03:56:13.764170+00:00 [queued]>
[2025-09-24T03:56:46.165+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spotify_etl_pipeline.gold_transform manual__2025-09-24T03:56:13.764170+00:00 [queued]>
[2025-09-24T03:56:46.166+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 6
[2025-09-24T03:56:46.176+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): gold_transform> on 2025-09-24 03:56:13.764170+00:00
[2025-09-24T03:56:46.188+0000] {standard_task_runner.py:57} INFO - Started process 40830 to run task
[2025-09-24T03:56:46.193+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'spotify_etl_pipeline', 'gold_transform', 'manual__2025-09-24T03:56:13.764170+00:00', '--job-id', '1862', '--raw', '--subdir', 'DAGS_FOLDER/spotify_dag.py', '--cfg-path', '/tmp/tmpumgzbayo']
[2025-09-24T03:56:46.196+0000] {standard_task_runner.py:85} INFO - Job 1862: Subtask gold_transform
[2025-09-24T03:56:46.260+0000] {task_command.py:415} INFO - Running <TaskInstance: spotify_etl_pipeline.gold_transform manual__2025-09-24T03:56:13.764170+00:00 [running]> on host 8a603698361b
[2025-09-24T03:56:46.344+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='spotify_etl_pipeline' AIRFLOW_CTX_TASK_ID='gold_transform' AIRFLOW_CTX_EXECUTION_DATE='2025-09-24T03:56:13.764170+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-09-24T03:56:13.764170+00:00'
[2025-09-24T03:56:46.363+0000] {logging_mixin.py:151} INFO - Executed sql/gold/listening_history/fact_listening_history.sql
[2025-09-24T03:56:46.370+0000] {logging_mixin.py:151} INFO - Executed sql/gold/listening_history/dim_tracks.sql
[2025-09-24T03:56:46.378+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/etl/db_utils.py", line 11, in run_sql_scripts
    cur.execute(sql)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 17:     t2.artist_image_link
             ^

[2025-09-24T03:56:46.386+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=spotify_etl_pipeline, task_id=gold_transform, execution_date=20250924T035613, start_date=20250924T035646, end_date=20250924T035646
[2025-09-24T03:56:46.394+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 1862 for task gold_transform (INSERT has more expressions than target columns
LINE 17:     t2.artist_image_link
             ^
; 40830)
[2025-09-24T03:56:46.418+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2025-09-24T03:56:46.434+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
